@@ -18,6 +18,11 @@ Version 1.3.1
 5460							: Selection check in the revision graph
 5464							: InterlockedExchange()
 5466							: missing author, date, revision in CSVNStatusListCtrl
+5469							: bogus remote property changes shown
+5480							: too small buffer (overflow/crash)
+5488							: Tooltip crash in TBlame
+5489							: Link-Export Option for iconv
+5492							: Create Patch used wrong root path
 
 Version 1.3.0
 5321, 5322						: issue #205.
