@@ -8,6 +8,12 @@ Version 1.3.1
 - BUG: Fix crashes on SMP systems. (Stefan)
 - BUG: Author, revision and date weren't always shown in the 
        'Check for modifications' dialog.
+- BUG: The "remote status" column could show "(property changes only)"
+       even if there were no property changes detected. (Stefan)
+- BUG: TortoiseBlame could crash when the mousepointer was hoovered over
+       just above the first visible line. (Stefan)
+- BUG: 'Create Patch' used the wrong root path. (Stefan)
+- BUG: The revision graph could crash when showing tooltips for nodes. (Stefan)
 
 Version 1.3.0
 - NEW: The settings dialog now has a button to open the system sound
